--- a/Tankz/Base.lproj/Main.storyboard
+++ b/Tankz/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Exit game"/>
                                 <connections>
-                                    <segue destination="MSC-9b-YLM" kind="showDetail" identifier="exitGameSegue" animates="NO" id="cSp-a9-Kgs"/>
+                                    <segue destination="D9A-YS-uel" kind="show" id="NIf-HQ-LTt"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -79,7 +79,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B8E-V6-Tyc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="869" y="2055"/>
+            <point key="canvasLocation" x="868.51574212893559" y="2053.5999999999999"/>
         </scene>
         <!--Game Lobby View Controller-->
         <scene sceneID="xZO-2E-HTE">
@@ -159,6 +159,5 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="aHV-xo-nWr"/>
-        <segue reference="cSp-a9-Kgs"/>
     </inferredMetricsTieBreakers>
 </document>
