Added table to GameLobby with custom cell

--- a/Tankz/Base.lproj/Main.storyboard
+++ b/Tankz/Base.lproj/Main.storyboard
@@ -114,29 +114,80 @@
                         <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Lobby" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xfr-9v-jNw">
-                                <rect key="frame" x="312" y="126" width="48" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uB1-aD-1dO">
-                                <rect key="frame" x="272" y="297" width="123" height="30"/>
+                                <rect key="frame" x="20" y="364" width="123" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Go to gameScene"/>
                                 <connections>
                                     <segue destination="f3q-Dh-8gc" kind="show" identifier="startGameSegue" id="vuO-js-pWY"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eUB-lh-BvB">
+                                <rect key="frame" x="68" y="57" width="340" height="130"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" name="groundBrown"/>
+                                <label key="tableHeaderView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Joined players" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4E0-ML-lyz">
+                                    <rect key="frame" x="0.0" y="0.0" width="340" height="36"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                    <color key="textColor" red="0.5568627451" green="0.96470588239999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="lobbyCell" id="5P9-kz-RWL" customClass="LobbyTableViewCell" customModule="Tankz" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="64" width="340" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5P9-kz-RWL" id="ut9-NE-Gv7">
+                                            <rect key="frame" x="0.0" y="0.0" width="340" height="43.666666666666664"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PlayerName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wHx-Re-YbW">
+                                                    <rect key="frame" x="5" y="11.333333333333334" width="92" height="20.333333333333329"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="ReadyStatus" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="glm-Gc-Xhj">
+                                                    <rect key="frame" x="203" y="11.999999999999998" width="97" height="20.333333333333329"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmarkIcon" translatesAutoresizingMaskIntoConstraints="NO" id="OGV-I1-OSQ">
+                                                    <rect key="frame" x="305" y="-106.33333333333333" width="30" height="256.33333333333331"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="vQF-4z-EQL"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="OGV-I1-OSQ" firstAttribute="leading" secondItem="glm-Gc-Xhj" secondAttribute="trailing" constant="5" id="H3d-7y-dPc"/>
+                                                <constraint firstItem="wHx-Re-YbW" firstAttribute="centerY" secondItem="ut9-NE-Gv7" secondAttribute="centerY" id="YDw-yP-Ds0"/>
+                                                <constraint firstItem="OGV-I1-OSQ" firstAttribute="centerY" secondItem="ut9-NE-Gv7" secondAttribute="centerY" id="mHA-of-mUy"/>
+                                                <constraint firstItem="glm-Gc-Xhj" firstAttribute="centerY" secondItem="ut9-NE-Gv7" secondAttribute="centerY" id="mPX-hH-O5v"/>
+                                                <constraint firstItem="wHx-Re-YbW" firstAttribute="leading" secondItem="ut9-NE-Gv7" secondAttribute="leading" constant="5" id="rQ3-wj-EMj"/>
+                                                <constraint firstAttribute="trailing" secondItem="OGV-I1-OSQ" secondAttribute="trailing" constant="5" id="uFB-pO-Mh9"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" name="militaryGreenLight"/>
+                                        <connections>
+                                            <outlet property="playerNameLabel" destination="wHx-Re-YbW" id="ASn-r3-WvP"/>
+                                            <outlet property="readyStatusLabel" destination="glm-Gc-Xhj" id="sVZ-Yo-Sch"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="groundBrown"/>
                         <viewLayoutGuide key="safeArea" id="tqF-kW-cHj"/>
                     </view>
+                    <connections>
+                        <outlet property="lobbyTable" destination="eUB-lh-BvB" id="DP3-tp-rVa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u5u-aG-k7G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="893" y="1103"/>
+            <point key="canvasLocation" x="892.66304347826099" y="1102.8985507246377"/>
         </scene>
         <!--Join Game View Controller-->
         <scene sceneID="wUl-wB-dbf">
@@ -197,16 +248,6 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4NS-J5-2yo">
-                                <rect key="frame" x="20" y="364" width="73" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Join Game">
-                                    <color key="titleColor" red="0.55686274509803924" green="0.96470588235294119" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <segue destination="usC-V1-22A" kind="show" identifier="connectToGameSegue" id="aHV-xo-nWr"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Availiable games" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qa8-2b-AXg">
                                 <rect key="frame" x="118" y="47" width="224" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -256,6 +297,7 @@
                         <outlet property="hostBtn" destination="5wd-0w-oqt" id="Ra8-2X-U18"/>
                         <outlet property="refreshBtn" destination="9iA-c5-PN0" id="r7o-K3-Xjv"/>
                         <outlet property="tableView" destination="312-8i-Ww0" id="1Fe-mq-UaW"/>
+                        <segue destination="usC-V1-22A" kind="show" identifier="connectToGameSegue" id="GtZ-rs-jmh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qxH-lX-3W6" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -282,12 +324,16 @@
         </scene>
     </scenes>
     <resources>
+        <image name="checkmarkIcon" width="256" height="256"/>
         <image name="refreshIcon" width="48" height="48"/>
         <namedColor name="groundBrown">
             <color red="0.40400001406669617" green="0.33700001239776611" blue="0.29800000786781311" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="militaryGreenLight">
+            <color red="0.30199998617172241" green="0.47099998593330383" blue="0.3059999942779541" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="aHV-xo-nWr"/>
+        <segue reference="IsV-7P-a5j"/>
     </inferredMetricsTieBreakers>
 </document>
